test/compile_errors/err_option_flatten_non_nested.w
//! expect-error: Option.flatten() requires Option[Option[T]]

fn main:
    let x: Option[i32] = Some(1)
    let _ = x.flatten()
